--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,8 @@
-org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
+#org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
+#android.useAndroidX=true
+#android.enableJetifier=true
+org.gradle.jvmargs=-Xms1024m -Xmx5048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
+android.gradle.internal.profile=off
+org.gradle.java.home=/opt/homebrew/opt/openjdk@17/libexec/openjdk.jdk/Contents/Home
