--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,25 +2,37 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>API_KEY</key>
-    <string>YOUR_FIREBASE_API_KEY</string>
-    <key>CLIENT_ID</key>
-    <string>YOUR_CLIENT_ID</string>
-    <key>PROJECT_ID</key>
-    <string>YOUR_PROJECT_ID</string>
-    <key>STORAGE_BUCKET</key>
-    <string>YOUR_PROJECT_ID.appspot.com</string>
-    <key>GCM_SENDER_ID</key>
-    <string>YOUR_PROJECT_NUMBER</string>
-    <key>PLIST_VERSION</key>
-    <string>1</string>
-    <key>BUNDLE_ID</key>
-    <string>YOUR_IOS_BUNDLE_ID</string>
-    <key>DATABASE_URL</key>
-    <string>https://YOUR_PROJECT_ID.firebaseio.com</string>
-    <key>TRACKING_ID</key>
-    <string>YOUR_TRACKING_ID</string>
-    <key>GOOGLE_APP_ID</key>
-    <string>YOUR_GOOGLE_APP_ID</string>
+	<key>CLIENT_ID</key>
+	<string>779977527630-7nkdccfloij5nee19g04sh31hfh6k2q2.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.779977527630-7nkdccfloij5nee19g04sh31hfh6k2q2</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>779977527630-9b15guu015cn97ob3g15v9a50qflulrr.apps.googleusercontent.com</string>
+	<key>API_KEY</key>
+	<string>AIzaSyBEx_S-pGCNl5yEeDPbJFtDNlxCSFtbTX8</string>
+	<key>GCM_SENDER_ID</key>
+	<string>779977527630</string>
+	<key>PLIST_VERSION</key>
+	<string>1</string>
+	<key>BUNDLE_ID</key>
+	<string>com.nexteck.thfdriver.ios</string>
+	<key>PROJECT_ID</key>
+	<string>thehalalfoods-e744e</string>
+	<key>STORAGE_BUCKET</key>
+	<string>thehalalfoods-e744e.appspot.com</string>
+	<key>IS_ADS_ENABLED</key>
+	<false></false>
+	<key>IS_ANALYTICS_ENABLED</key>
+	<false></false>
+	<key>IS_APPINVITE_ENABLED</key>
+	<true></true>
+	<key>IS_GCM_ENABLED</key>
+	<true></true>
+	<key>IS_SIGNIN_ENABLED</key>
+	<true></true>
+	<key>GOOGLE_APP_ID</key>
+	<string>1:779977527630:ios:879efe44aa45f24d1c8e1f</string>
+	<key>DATABASE_URL</key>
+	<string>https://thehalalfoods-e744e-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
